# esp32_firmware_refactoring

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.projbuild  MEMO.md  Makefile  TEST_UNITY_GUIDE.md  clean_test_builds.sh  generate_intellisense.sh  requirements.txt  restore_normal_simple.sh  run_security1_tests.sh  run_tests_simple.sh  sdkconfig  sdkconfig.old
.github/workflows/: build.yml
.tmp.driveupload/: 38351  38359  38361  38363
components/chunk_manager/: CMakeLists.txt  chunk_manager.c  chunk_manager.h
components/cmd_proc/: CMakeLists.txt  cmd_proc_task.c
components/codec/: CMakeLists.txt  codec.c  codec.h
components/error_manager/: CMakeLists.txt  error_manager.c  error_manager.h
components/protocol_types/: CMakeLists.txt
components/schedule/: CMakeLists.txt  schedule.c
components/security1_session/: CMakeLists.txt  Kconfig  handshake_ble.c  handshake_ble.h  handshake_mqtt.c  handshake_mqtt.h  security1_session.c  security1_session.h
components/solenoid/: CMakeLists.txt  solenoid.h
components/transport_mqtt/test/: CMakeLists.txt  test_backoff.c  test_main.c  test_message_routing.c  test_mqtt_events.c  test_transport_api.c
components/transport_mqtt/test/mocks/: mock_mqtt_client.c  mock_mqtt_client.h
main/: CMakeLists.txt  Kconfig  app_main.c  app_main_normal.c  app_main_test.c  cmd_proc.h  cmd_proc_task.c  codec.h  resp_frame.h  schedule.h  solenoid.c  test_main.c  test_wifi_simple.c  test_wifi_simple.h  transport_ble.c  transport_ble.h  wifi.h
smartdrip-tools/: Makefile  README_testing.md  requirements.txt  send_ble_command.py  test_backpressure.sh  test_ble_chunking.py  test_mqtt_connection.py  test_security1.py  write_sync_schedule.py
(+53 files in other folders)
